# infinite-scribe

./: .coderabbit.yaml  .cursorignore  .env.agents.example  .env.backend.example  .env.dev  .env.example  .env.frontend.example  .env.remote-docker  .env.test  .eslintignore  .eslintrc.js  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .trivyignore  AGENTS.md  CLAUDE.md  CODE_REVIEW_FIXES.md  ENV_STRUCTURE.md  GEMINI.md  IMPLEMENTATION_PLAN.md  Makefile  PYTHON_DEV_QUICKSTART.md  README-auth-mvp.md  README.md  SSE_IMPLEMENTATION_PLAN.md  SSE_REVIEW_REPORT.md  docker-compose.backend.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  test_local.sh  test_remote.sh  test_unit.sh  tsconfig.base.json  (+1 more)
.gemini/: config.yaml  (+2 more)
apps/backend/: .env.ci  .env.example  .env.test  API_DUPLICATION_RESOLUTION.md  CLAUDE.md  Dockerfile  Makefile  README.md  README_STORY_2_2.md  alembic.ini  config.toml  config.toml.example  conftest.py  debug_round_creation.py  docker-entrypoint.sh  pyproject.toml  pyrightconfig.json  test-neo4j-compose.yml  test_login_fix.py
apps/backend/alembic/: README_MIGRATION_STRATEGY.md  env.py  migration_log.md
apps/backend/alembic/versions/: 06127b2a2f28_.py  20250905_add_failed_to_outbox_status_enum.py  36ba569035ab_check_models_after_base_import_fix.py  3b8fe0c17290_initial_migration_for_core_business_.py  609b39cc5069_create_genesis_decoupling_tables.py  86c52aea2834_initial_migration_for_user_.py  909dc5666340_add_initial_prompt_enum_value.py  9de0f061b66e_add_conversation_tables_with_.py  README.md  a40aa203010a_add_unique_constraint_for_active_.py  cdbb7c721fea_add_column_comments_to_all_tables.py  d26625f6db43_add_user_id_to_novels_table.py  d54f6b6e14e2_update_genesis_stage_data_and_cleanup.py  e63af3b9a311_update_all_datetime_fields_to_use_.py  ede76b653bb9_verify_and_update_genesis_schema_.py  f4a652259140_fix_missing_round_sequence_column.py  fdf4baeb26a6_merge_migration_branches.py
apps/backend/docs/: adding-new-models.md  authentication-flow.md  config-comparison.md  configuration-guide.md  launcher-cli.md  launcher-configuration.md  password-service-migration.md  relay-service.md  session-cache-optimization.md  session-management-guide.md  sse_monitoring_guide.md  sse_shutdown_cleanup_fix.md  timezone-migration.md  toml-loader-best-practices.md
apps/backend/docs/development/: api-endpoints-progress.md
apps/backend/scripts/: README.md  README_API_GATEWAY.md  apply_db_functions.py  convert_comments_to_column_param.py  create_db_functions.sql  create_db_functions_clean.sql  run-api-gateway-dev.sh  run-api-gateway-local.sh  run-api-gateway-simple.sh  show_table_info.py  sse_test_cli.py  type-check.sh  verify_genesis_schema.py  verify_tables.py
apps/backend/src/: REFACTORING_SUMMARY.md  database.py
apps/backend/src/agents/: README.md  agent_config.py  agent_metrics.py  agent_template.py  base.py  error_handler.py  errors.py  kafka_client.py  launcher.py  main.py  message.py  message_processor.py  metrics.py  offset_manager.py  registry.py
apps/backend/src/agents/content_analyzer/: __init__.py  agent.py
apps/backend/src/agents/director/: __init__.py  agent.py
apps/backend/src/agents/knowledge_updater/: __init__.py  agent.py
apps/backend/src/agents/message_relay/: main.py
apps/backend/src/agents/orchestrator/: README.md  __init__.py  agent.py  capability_event_processor.py  command_strategies.py  domain_event_processor.py  event_handlers.py  message_factory.py  outbox_manager.py  task_manager.py
apps/backend/src/agents/worldsmith/: main.py
apps/backend/src/agents/writer/: __init__.py  agent.py  tools.py
apps/backend/src/api/: main.py
apps/backend/src/api/middleware/: cancelled_error.py
apps/backend/src/api/models/: __init__.py  launcher.py
apps/backend/src/api/routes/: __init__.py  docs.py  health.py
apps/backend/src/api/schemas/: __init__.py  auth.py  genesis.py
apps/backend/src/core/: __init__.py  auth_config.py  config.py  database.py  messaging.py  toml_loader.py
apps/backend/src/db/: __init__.py  bootstrap.py
apps/backend/src/launcher/: __init__.py  arg_resolver.py  cli.py  commands.py  config.py  daemon.py  errors.py  health.py  orchestrator.py  signal_utils.py  types.py
apps/backend/src/middleware/: __init__.py  auth.py  cors.py  rate_limit.py
apps/backend/src/models/: __init__.py  api.py  base.py  chapter.py  character.py  conversation.py  db.py  db_old.py  email_verification.py  event.py  events.py  genesis.py  genesis_flows.py  novel.py  orm_models.py  session.py  sql_orm_comparison_report.md  sse.py  user.py  workflow.py  worldview.py
apps/backend/src/schemas/: README.md  __init__.py  base.py  domain_event.py  enums.py  genesis_events.py  session.py  sse.py
apps/backend/src/services/: __init__.py  sse_connection_manager.py
apps/backend/tests/: README.md  README_OUTBOX_TESTS.md  conftest.py  test_config.py
apps/backend/tests/component/: __init__.py  conftest.py
apps/backend/tests/contract/: CLAUDE.md  README.md  conftest.py
apps/backend/tests/fixtures/: app_env.py  asyncio_loop.py  clients.py  config.py  mocks.py  postgres.py  redis.py  services.py
apps/backend/tests/helpers/: prefix_client.py
apps/backend/tests/integration/: conftest.py  test_alembic_migration.py  test_command_to_event_flow.py  test_conversation_migration.py  test_conversation_outbox.py  test_conversation_service_more.py  test_cqrs_migration.py  test_database_connections.py  test_genesis_flows_api.py  test_genesis_flows_api_comprehensive.py  test_message_relay.py  test_milvus_hnsw_index.py  test_milvus_partitioning.py  test_milvus_performance.py  test_milvus_ttl_management.py  test_milvus_vector_migration.py  test_outbox_relay_concurrency.py  test_outbox_relay_service.py  test_outbox_relay_with_kafka.py  test_redis_cache_migration.py  test_remote_databases.py
apps/backend/tests/unit/: conftest.py  test_database.py  test_event_models.py  test_event_sourcing_models.py  test_event_sourcing_models_old.py  test_mocks.py  test_task_flow_models.py
(+1339 files in other folders)
